<resources>
    <string name="app_name">Notes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_login_title">Notes</string>
    <string name="action_login_login">Login</string>
    <string name="hint_login_username">Username</string>
    <string name="hint_login_password">Password</string>


    <string name="hint_add_note_title">Title</string>
    <string name="hint_add_note_note">Note</string>
    <string name="action_add_note_add">Add</string>
</resources>